--- a/pages/index.html
+++ b/pages/index.html
@@ -21,9 +21,9 @@
                 <img class="card-img-cel" src="/images/images-removebg-preview.png" alt="">
                 <h3 class="price">Precio:<span id="stock">800.000</span></h3>
             </div>
-            <button id="incremento" onclick="incremento()" class="button">+</button>
-            <button id="decremento" onclick="decremento()"  class="button">-</button>
-            <button id="resetear" onclick="resetear()"  class="button-1"><i class="fa-solid fa-trash"></i></button>
+            <button id="incremento" class="button">+</button>
+            <button id="decremento"   class="button">-</button>
+            <button id="resetear"   class="button-1"><i class="fa-solid fa-trash"></i></button>
         </div>
     </div>
 </div>
